# bossjam_2015

./: .gitmodules  CMakeLists.txt  README.md  readme.txt
Dependencies/: CmakeLists.txt
Game/: CMakeLists.txt
Game/Include/: AbstractGame.hpp  CollisionHandler.hpp  Game.hpp  LuaScript.h  MusicManager.hpp  Player.hpp  PlayerContext.hpp  ShutdownState.hpp  Text.hpp  Textmanager.hpp  XboxController.hpp  XboxInput.hpp
Game/Include/Audio/: MusicManager.hpp  SoundManager.hpp
Game/Include/Collision/: CollisionHandler.hpp
Game/Include/Entity/: AbstractEntity.hpp
Game/Include/Entity/Impl/: BaseEntity.hpp  EntityType.hpp  TeleportEntity.hpp
Game/Include/Level/: Grid.hpp  Level.hpp  Node.hpp
Game/Include/Media/: Manager.hpp
Game/Include/Scene/: AbstractScene.hpp  AbstractSceneManager.hpp  SceneType.hpp
Game/Include/Scene/Impl/: BaseScene.hpp  CharacterSelectScene.hpp  EditScene.hpp  GameScene.hpp  MenuScene.hpp  SceneManager.hpp
Game/Include/Sprite/: AnimatedSprite.hpp
Game/Include/System/: Color.hpp  ColorCoding.hpp  DataManager.hpp  Text.hpp  XboxInput.hpp
Game/Source/: CollisionHandler.cpp  Game.cpp  LuaScript.cpp  MusicManager.cpp  Player.cpp  PlayerContext.cpp  Text.cpp  Textmanager.cpp  XboxController.cpp  XboxInput.cpp  main.cpp
Game/Source/Audio/: MusicManager.cpp  SoundManager.cpp
Game/Source/Entity/: BaseEntity.cpp  TeleportEntity.cpp
Game/Source/Level/: Grid.cpp  Level.cpp  Node.cpp
Game/Source/Scene/Impl/: BaseScene.cpp  CharacterSelectScene.cpp  EditScene.cpp  GameScene.cpp  MenuScene.cpp  Scenemanager.cpp
Game/Source/Sprite/: AnimatedSprite.cpp  Animation.cpp
